2003-08-04  mput <root@mput.dip.jp>

	* timidity/timidity.c: Some option renamed
	  --auto-volume-compensation -> --[no-]volume-compensation
	  --config                   -> --config-file
	  --keysig                   -> --force-keysig
	  --key                      -> --adjust-key
	  --[no-]recomposer-dll      -> --[no-]-rcpcv-dll
	  --tempo                    -> --adjust-tempo
	  --[no-]overlap             -> --[no-]overlap-voice
	  --text-conversion          -> --output-charset
	(parse_opt_204): Add

2003-08-04  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Fix typo again

2003-08-04  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c:
	  Separate independence of --auto-volume-conpensation
	  Merge --buffer-bits to --buffer-fragments

2003-08-04  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Fix typo around long options

2003-08-03  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Hack up around long options

2003-08-03  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Add function prototypes

2003-08-03 mput <root@mput.dip.jp>

	* timidity/timidity.c (parse_opt_223): Fix typo

2003-08-02  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Fix almost all warnings

2003-08-02  mput <root@mput.dip.jp>

	* timidity/timidity.c: Fix typo and so on

2003-08-02  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Fix around long options

2003-07-31  mput <root@mput.dip.jp>

	* utils/tmdy_getopt.h: Moved from utils/getopt.h
	* timidity/timidity.c, utils/Makefile.am, utils/getopt.c:
	  Fix to fit above

2003-07-31  mput <root@mput.dip.jp>

	* utils/getopt.h: Fix including headers
	* timidity/timidity.c: Fix doubled header include

2003-07-29  mput <root@mput.dip.jp>

	* timidity/timidity.c (help): rewrite to fit with long options.
	  (set_tim_opt_short): Rename from set_tim_opt().
	  (set_tim_opt_long): Add.
	  (version): Add.
	* utils/getopt.[ch]: Add.
	* utils/support.[ch]: Delete getopt()